
Updating menus for some themes, and removing some themes that really
don't demonstrate anything spectacular.  They'll go on the web site.
----------------------------------------------------------------------
Thu Aug 23 14:00:02 2001                        Michael Jennings (mej)

I got tired of having to maintain half a gazillion menus.cfg files
considering that the vast majority of them are identical or have
large identical sections.  Thus, I took the m4-based menus.cfg from
the chooser theme and hacked on it a bunch.  I can now regenerate
the menu files for all Eterm themes from a single source file using
the gen-menus script in doc/.

I also removed the comments from the theme.cfg files of all themes
except "Eterm" itself.
----------------------------------------------------------------------
Thu Aug 23 14:19:48 2001                        Michael Jennings (mej)

I forgot to mention that I made a small change to the input routine to
try and support Cyrillic characters without XIM.  This was requested
by Konstantin Zemlyak <zart@mail.ru>.
----------------------------------------------------------------------
Mon Aug 27 14:48:17 2001                        Michael Jennings (mej)

Minor typos in the mutt menus.
----------------------------------------------------------------------
Tue Aug 28 00:30:55 2001                        Michael Jennings (mej)

Let's see if this fixes the PrintScreen problems....
----------------------------------------------------------------------
Thu Sep  6 15:16:05 2001                        Michael Jennings (mej)

Argh.  I hate finding stuff like this after a release.  Luckily, it's
not severe.  It only occurs when --default-font-index is specified on
the command line.  Symptoms vary according to how the compiler
arranges certain variables in memory.

Thanks to Richard Lowe <richlowe@richlowe.net> for reporting the
problem.
----------------------------------------------------------------------